Java: fix calls to Integer and Double constructors, marked for removal